package com.fangio.backend.auth;

public enum Role {
    ADMIN,
    INSTRUCTOR
}
